// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField should render a select input with custom props 1`] = `
<div
  style="background: red;"
>
  <div
    class="dropdown"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class=""
      data-toggle="dropdown"
    >
      <div
        class="select dropdown-toggle"
      >
        <span
          class="label"
          style="min-width: 10px; opacity: 1;"
        >
          First
        </span>
        <input
          autocomplete="chrome-off"
          class="input"
          style="min-width: 10px;"
          type="text"
          value=""
        />
        <i
          class="material-icons dropdownIcon"
        >
          arrow_drop_down
        </i>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="options dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      
      <button
        class="option option--focused dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <span>
          Second
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SelectField should render a select input with default props 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      aria-expanded="false"
      aria-haspopup="true"
      class=""
      data-toggle="dropdown"
    >
      <div
        class="select dropdown-toggle"
      >
        <span
          class="label placeholder"
          style="min-width: 10px; opacity: 1;"
        >
          Select an option
        </span>
        <input
          autocomplete="chrome-off"
          class="input"
          style="min-width: 10px;"
          type="text"
          value=""
        />
        <i
          class="material-icons dropdownIcon"
        >
          arrow_drop_down
        </i>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="options dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <h6
        class="dropdown-header"
        tabindex="-1"
      >
        No result
      </h6>
    </div>
  </div>
</div>
`;
